PR middle-end/65074

* varasm.c (default_binds_local_p_2): Don't test node->definition;
 test DECL_EXTERNAL independent of symtab_node.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220816 138bc75d-0d04-0410-961f-82ee72b054a4